# SubspaceRadio

./: .pre-commit-config.yaml  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
src/swingmusic/: __main__.py  app_builder.py  config.py  logger.py  periodic_scan.py  settings.py  start_swingmusic.py  tools.py
src/swingmusic/api/: __init__.py  album.py  apischemas.py  artist.py  auth.py  backup_and_restore.py  collections.py  colors.py  download.py  favorites.py  folder.py  imgserver.py  lyrics.py  musicbrainz.py  playlist.py  search.py  settings.py  stream.py
src/swingmusic/api/getall/: __init__.py
src/swingmusic/api/home/: __init__.py
src/swingmusic/api/plugins/: __init__.py  lyrics.py  mixes.py
src/swingmusic/api/scrobble/: __init__.py
src/swingmusic/crons/: __init__.py  cron.py
src/swingmusic/data/: __init__.py
src/swingmusic/db/: __init__.py  engine.py  libdata.py  metadata.py  userdata.py  utils.py
src/swingmusic/db/sqlite/: utils.py
src/swingmusic/jsoni/: index.py
src/swingmusic/lib/: artistlib.py  colorlib.py  extras.py  folderslib.py  index.py  lyrics.py  mapstuff.py  musicbrainz.py  pagelib.py  playlistlib.py  populate.py  searchlib.py  sortlib.py  tagger.py  taglib.py  trackslib.py  transcoder.py  watchdogg.py
src/swingmusic/lib/home/: create_items.py  get_recently_played.py  recentlyadded.py  recentlyplayed.py  recover_items.py
src/swingmusic/lib/pydub/: setup.py
src/swingmusic/lib/pydub/pydub/: audio_segment.py  effects.py  generators.py  logging_utils.py  playback.py  pyaudioop.py  scipy_effects.py  silence.py  utils.py
src/swingmusic/lib/recipes/: __init__.py  artistmixes.py  because.py  recents.py  topstreamed.py
src/swingmusic/migrations/: __init__.py  base.py
src/swingmusic/models/: __init__.py  album.py  lastfm.py  logger.py  mix.py  playlist.py  plugins.py  track.py  user.py
src/swingmusic/plugins/: __init__.py  lastfm.py  lyrics.py  mixes.py  register.py
src/swingmusic/request/: artists.py
src/swingmusic/serializers/: album.py  artist.py  playlist.py  track.py
src/swingmusic/setup/: __init__.py  sqlite.py
src/swingmusic/store/: albums.py  artists.py  folder.py  homepage.py  homepageentries.py  tracks.py
src/swingmusic/utils/: __init__.py  auth.py  bisection.py  customlist.py  dates.py  filesystem.py  generators.py  hashing.py  mixes.py  network.py  parsers.py  paths.py  progressbar.py  stats.py  threading.py  unicode.py
tests/: conftest.py  test_album_model.py  test_dates.py  test_hashing.py  test_parsers.py  test_playlist_reorder.py  test_sortlib.py  test_split_artists.py  test_utils.py
