[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "swingmusic"
description = "Swing Music"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "pillow>=11.1.0",
    "Flask>=3.1.0",
    "Flask-Cors>=3.0.10",
    "requests>=2.27.1",
    "colorgram.py>=1.2.0",
    "tqdm>=4.65.0",
    "tinytag>=2.1.1",
    "Unidecode>=1.3.6",
    "psutil>=5.9.4",
    "show-in-file-manager>=1.1.4",
    "flask-compress>=1.13",
    "tabulate>=0.9.0",
    "setproctitle>=1.3.2",
    "locust>=2.20.1",
    "watchdog>=4.0.0",
    "flask-jwt-extended>=4.6.0",
    "sqlalchemy>=2.0.31",
    "memory-profiler>=0.61.0",
    "sortedcontainers>=2.4.0",
    "xxhash>=3.4.1",
    "ffmpeg-python>=0.2.0",
    "schedule>=1.2.2",
    "pillow>=11.1.0",
    "flask-openapi3==3.0.2",
    "rapidfuzz==3.11.0",
    "pendulum>=3.0.0",
    "pystray>=0.19.5",
    "waitress>=3.0.2; sys_platform == 'win32'",
    "bjoern >=3.2.2; sys_platform != 'win32'",
]

[project.optional-dependencies]
build = [
    "pyinstaller"
]

[tool.uv]
dependency-metadata = [
    { name = "waitress", version = "3.0.2", requires-dist = [], requires-python = ">=3.11" },
    { name = "bjoern", version="3.2.2", requires-dist = [], requires-python = ">=3.11"}
]

[project.scripts]
swingmusic = "swingmusic.__main__:run"


[project.urls]
Homepage = "https://swingmx.com/"
Repository = "https://github.com/swingmx/swingmusic"
Documentation = "https://swingmx.com/guide/introduction.html"
Issues = "https://github.com/swingmx/swingmusic/issues"


[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"
fallback_version = "v0.0.0"

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
    "twine>=6.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]
extend-exclude = ["src/swingmusic/lib"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long — wird vom formatter gehandhabt
    "E731",   # lambda assignment — in diesem Projekt bewusst genutzt
    "SIM102", # collapsible-if — oft lesbarer als kombiniertes if
    "SIM105", # suppressible-exception — try/except/pass ist expliziter
    "SIM108", # ternary statt if/else — bei langen Ausdrücken unleserlich
    "SIM210", # bool() statt if/else True/False
    "RUF012", # mutable class default — false positives bei SQLAlchemy models
]

[tool.ruff.lint.isort]
known-first-party = ["swingmusic"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["src/swingmusic/lib/pydub"]

# Strict mode for modules that are already clean
[[tool.mypy.overrides]]
module = [
    "swingmusic.utils.hashing",
    "swingmusic.utils.dates",
    "swingmusic.utils.parsers",
    "swingmusic.utils",
]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
